[gd_scene load_steps=12 format=3 uid="uid://bef1lt31hgv6l"]

[ext_resource type="Theme" uid="uid://d1qd6ity2mdpl" path="res://creator/creator_ui.theme.tres" id="1_enh45"]
[ext_resource type="Script" path="res://creator/selection/inspector/primitive/inspector_scroller.gd" id="2_4yse6"]
[ext_resource type="FontFile" uid="uid://cv5tkor0qdxqq" path="res://ui/common/fonts/fontawesome-free-6/Font Awesome 6 Free-Solid-900.otf" id="3_kypjo"]
[ext_resource type="FontFile" uid="uid://dhpbqmk3ulim4" path="res://ui/common/fonts/montserrat/montserrat_bold.ttf" id="4_de7kc"]
[ext_resource type="PackedScene" uid="uid://cy566ld7k03ue" path="res://creator/selection/inspector/primitive/inspector_reset_button.tscn" id="5_0sjmn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cvsu"]
bg_color = Color(0.145098, 0.419608, 0.984314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikqnn"]
bg_color = Color(0.145098, 0.419608, 0.984314, 0.247059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l8f8"]
bg_color = Color(0.0431373, 0.0627451, 0.129412, 0.784314)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bc6g8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6sku5"]
bg_color = Color(0.145098, 0.419608, 0.984314, 0.196078)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3crv8"]
bg_color = Color(0.6, 0.6, 0.6, 0.156863)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="InspectorPropertyScroller" type="HBoxContainer"]
custom_minimum_size = Vector2(256, 30)
offset_right = 256.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource("1_enh45")
theme_override_constants/separation = 0
script = ExtResource("2_4yse6")
_stylebox_pill_active = SubResource("StyleBoxFlat_7cvsu")
_stylebox_pill = SubResource("StyleBoxFlat_ikqnn")

[node name="LabelHolder" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2

[node name="Label" type="Label" parent="LabelHolder"]
clip_contents = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "E"
vertical_alignment = 1
clip_text = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3l8f8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ButtonLeft" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kypjo")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_bc6g8")
theme_override_styles/hover = SubResource("StyleBoxFlat_6sku5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6sku5")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3crv8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bc6g8")
text = "angle-left"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="OptionLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_de7kc")
theme_override_font_sizes/font_size = 16
text = "OPTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PillsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonRight" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kypjo")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_bc6g8")
theme_override_styles/hover = SubResource("StyleBoxFlat_6sku5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6sku5")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3crv8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bc6g8")
text = "angle-right"

[node name="ResetButton" parent="." instance=ExtResource("5_0sjmn")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/ButtonRight" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
